# dataapi-sdks

./: .gitignore  CONTRIBUTING.md  README.md  build.gradle  gradle.properties  settings.gradle
cpp-sdk/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle
cpp-sdk/cmake/: DataApiSDKConfig.cmake.in
cpp-sdk/examples/: basic-example.cpp
cpp-sdk/include/dataapi/: ClientConfig.h  DataApiClient.h  Types.h
cpp-sdk/include/dataapi/auth/: AuthenticationProvider.h
cpp-sdk/include/dataapi/client/: AiProviderClient.h  DatabaseClient.h  ProjectClient.h  UserClient.h  WorkflowClient.h
cpp-sdk/include/dataapi/error/: DataApiError.h
cpp-sdk/include/dataapi/exceptions/: DataApiException.h
cpp-sdk/include/dataapi/http/: HttpClient.h
cpp-sdk/include/dataapi/types/: AiTypes.h  CommonTypes.h  DatabaseTypes.h  ProjectTypes.h  UserTypes.h  WorkflowTypes.h
cpp-sdk/include/dataapi/utils/: JsonUtils.h  StringUtils.h  UrlUtils.h
cpp-sdk/src/: ClientConfig.cpp  DataApiClient.cpp  HttpClient.cpp  Types.cpp
cpp-sdk/src/auth/: AuthenticationProvider.cpp  BasicAuthProvider.cpp
cpp-sdk/src/client/: AiProviderClient.cpp  DatabaseClient.cpp  ProjectClient.cpp  UserClient.cpp  WorkflowClient.cpp
cpp-sdk/src/exceptions/: AuthenticationException.cpp  DataApiException.cpp  HttpException.cpp  ValidationException.cpp
cpp-sdk/src/types/: AiTypes.cpp  CommonTypes.cpp  DatabaseTypes.cpp  ProjectTypes.cpp  UserTypes.cpp  WorkflowTypes.cpp
cpp-sdk/src/utils/: JsonUtils.cpp  StringUtils.cpp  UrlUtils.cpp
cpp-sdk/tests/: test_auth_providers.cpp  test_http_client.cpp  test_workflow_client.cpp
docs/: README.md  getting-started.md
examples/: build.gradle
examples/cpp/: basic-example.cpp  basic_example.cpp
examples/java/: BasicExample.java
examples/typescript/: basic-example.ts
java-sdk/: build.gradle
java-sdk/src/main/java/com/owiseman/dataapi/sdk/: DataApiClient.java
java-sdk/src/main/java/com/owiseman/dataapi/sdk/auth/: AuthenticationProvider.java  BearerTokenAuthProvider.java
java-sdk/src/main/java/com/owiseman/dataapi/sdk/client/: AiProviderClient.java  BaseClient.java  DatabaseClient.java  ProjectClient.java  UserClient.java  WorkflowClient.java
java-sdk/src/main/java/com/owiseman/dataapi/sdk/config/: ClientConfig.java
java-sdk/src/main/java/com/owiseman/dataapi/sdk/exception/: AuthenticationException.java  DataApiException.java
java-sdk/src/main/java/com/owiseman/dataapi/sdk/http/: HttpClient.java
java-sdk/src/main/java/com/owiseman/dataapi/sdk/model/: PageResult.java  SysWorkflow.java  WorkflowCreateRequest.java  WorkflowExecutionRequest.java  WorkflowUpdateRequest.java
python-sdk/: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  tox.ini
python-sdk/.github/workflows/: ci.yml
python-sdk/examples/: basic_usage.py
python-sdk/scripts/: __init__.py  check_changelog.py  check_version.py  validate_examples.py
python-sdk/src/dataapi/: __init__.py  auth.py  client.py  config.py  dataapi_client.py  exceptions.py  types.py
python-sdk/src/dataapi/services/: __init__.py  ai.py  databases.py  workflows.py
python-sdk/tests/: __init__.py  test_auth.py  test_client.py  test_config.py  test_dataapi_client.py  test_exceptions.py  test_types.py
typescript-sdk/: build.gradle  package.json  tsconfig.json
typescript-sdk/src/: index.ts
typescript-sdk/src/auth/: ApiKeyAuthProvider.ts  AuthenticationProvider.ts  BasicAuthProvider.ts  BearerTokenAuthProvider.ts  index.ts
typescript-sdk/src/client/: AiProviderClient.ts  DataApiClient.ts  DatabaseClient.ts  ProjectClient.ts  UserClient.ts  WorkflowClient.ts
typescript-sdk/src/config/: ClientConfig.ts
typescript-sdk/src/errors/: AuthenticationError.ts  DataApiError.ts  HttpError.ts  ValidationError.ts  index.ts
typescript-sdk/src/http/: HttpClient.ts
typescript-sdk/src/types/: index.ts
